--- a/style.css
+++ b/style.css
@@ -11,3 +11,17 @@ video {
   height: 100vh;
   object-fit: cover;
 }
+
+.info {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  max-width: 600px;
+  color: white;
+  font-size: 24px;
+  font-family: sans-serif;
+  background: url(spray.png);
+  background-size: 100% 90%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
